# TEDA---TCC

./: .gitattributes  .gitignore  LICENSE  README.md
Dev/: CMakeLists.txt  build.sh  cleanUp.sh
Dev/Functions/DbFunctions/: CreateTable.c  InsertTable.c  RetrieveLabel.c
Dev/Functions/MathFunctions/: bfs_grouping.c  create_adjency_matrix.c  eccentricity.c  matrix_allocation.c  micro_cluster.c  recursive_eccentricity.c  recursive_mean.c  regroup_adjency_matrix.c  squared_cumulative_proximity.c  squared_eccentricity.c  vec_dot_product.c
Dev/Header/: GlobalHeader.h
Dev/InfoSource/: chameleon-ds4-clean.csv  readme.txt  readme2.txt  std_4.csv  text_write.py
Dev/InfoSource/std_1/: std_0.csv  std_0.txt  std_1.csv  std_1.txt  std_10.csv  std_10.txt  std_11.csv  std_11.txt  std_12.csv  std_12.txt  std_13.csv  std_13.txt  std_14.csv  std_14.txt  std_15.csv  std_15.txt  std_16.csv  std_16.txt  std_17.csv  std_17.txt  std_18.csv  std_18.txt  std_19.csv  std_19.txt  std_2.csv  std_2.txt  std_3.csv  std_3.txt  std_4.csv  std_4.txt  std_5.csv  std_5.txt  std_6.csv  std_6.txt  std_7.csv  std_7.txt  std_8.csv  std_8.txt  std_9.csv  std_9.txt
Dev/InfoSource/std_2/: std_0.csv  std_0.txt  std_1.csv  (+37 more)
Dev/plots/: classified_samples.txt  classified_samples6.txt  damian_lilliard_macro.txt  file_macro_after.txt  file_macro_before.txt  micro.txt  plot_clusters.py  plot_macro_clusters.py  plot_samples_classified.py  samples.txt
Dev/samples_test/: ari_values.py  ari_values_one_d.py  ari_values_r_factor.py  std_1.csv  std_3.csv  std_5.csv  std_6.csv  std_7.csv
Dev/src/: main.c  main.py
(+385 files in other folders)
